--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,10 @@ PyMuPDF==1.23.8
 pdf2image==1.17.0
 ultralytics==8.1.2
 opencv-python==4.9.0.80
-numpy==1.26.4
-Pillow==10.2.0 
+numpy==1.26.3
+Pillow==10.2.0
+segment-anything==1.0
+torch>=2.0.0
+torchvision>=0.15.0 
+yoloworld==0.0.1
+setproctitle
